# Toybox-SDL-Windowing-Plugin

./: .gitignore  CMakeLists.txt  SDL3 Windowing.plugin  premake5.lua
Source/: SDLWindow.cpp  SDLWindow.h  SDLWindowFactory.cpp  SDLWindowFactory.h  SDLWindowFactoryPlugin.cpp  SDLWindowFactoryPlugin.h
